--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,8 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
