--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 .App {
-  font-family: sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
 }
 
-table, th, td {
-  border: 1px solid black;
-  border-collapse: collapse;
+table,
+tr {
+  width: 100%;
 }
